force-app/main/default/objects/Citizen_Detail__c/Citizen_Detail__c.object-meta.xml
<CustomObject>
    <label>Citizen Detail</label>
    <nameField>
        <label>Citizen detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citizen Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>