force-app/main/default/objects/Citizen_Detail__c/fields/SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen__c</fullName>
    <label>SA Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Citizen</fullName>
                <default>true</default>
                <label>SA Citizen</label>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>