force-app/main/default/objects/Citizen_Detail__c/fields/SA_ID__c.field-meta.xml
<CustomField>
    <fullName>SA_ID__c</fullName>
    <label>SA ID</label>
    <precision>13</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>